Fase 3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkCarEspecial
    TkCaracterError
    TkErrorSol
    TkError
    TkCarError
    TkLlaveAbre
    TkLlaveCierra

Grammar

Rule 0     S' -> bloque
Rule 1     bloque -> TkBegin cuerpo TkEnd
Rule 2     bloque -> TkWith declaracion TkBegin cuerpo TkEnd
Rule 3     declaracion -> TkVar variables TkDosPuntos TkInt
Rule 4     declaracion -> TkVar variables TkDosPuntos TkBool
Rule 5     declaracion -> TkVar variables TkDosPuntos TkChar
Rule 6     declaracion -> TkVar variables TkDosPuntos arreglo
Rule 7     declaracion -> TkVar variables TkDosPuntos TkInt declaracion
Rule 8     declaracion -> TkVar variables TkDosPuntos TkBool declaracion
Rule 9     declaracion -> TkVar variables TkDosPuntos TkChar declaracion
Rule 10    declaracion -> TkVar variables TkDosPuntos arreglo declaracion
Rule 11    arreglo -> TkArray TkCorcheteAbre terminal TkCorcheteCierra TkOf TkChar
Rule 12    arreglo -> TkArray TkCorcheteAbre terminal TkCorcheteCierra TkOf TkInt
Rule 13    arreglo -> TkArray TkCorcheteAbre terminal TkCorcheteCierra TkOf TkBool
Rule 14    arreglo -> TkArray TkCorcheteAbre terminal TkCorcheteCierra TkOf arreglo
Rule 15    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf TkChar
Rule 16    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf TkInt
Rule 17    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf TkBool
Rule 18    arreglo -> TkArray TkCorcheteAbre opAritm TkCorcheteCierra TkOf arreglo
Rule 19    arreglo -> TkArray TkCorcheteAbre indice TkCorcheteCierra TkOf TkChar
Rule 20    arreglo -> TkArray TkCorcheteAbre indice TkCorcheteCierra TkOf TkInt
Rule 21    arreglo -> TkArray TkCorcheteAbre indice TkCorcheteCierra TkOf TkBool
Rule 22    arreglo -> TkArray TkCorcheteAbre indice TkCorcheteCierra TkOf arreglo
Rule 23    terminal -> TkId
Rule 24    terminal -> TkCaracter
Rule 25    terminal -> TkNum
Rule 26    terminal -> TkTrue
Rule 27    terminal -> TkFalse
Rule 28    terminal -> TkTab
Rule 29    terminal -> TkSalto
Rule 30    terminal -> TkComilla
Rule 31    terminal -> TkBarra
Rule 32    terminal -> TkParAbre terminal TkParCierra
Rule 33    cuerpo -> instruccion
Rule 34    cuerpo -> instruccion cuerpo
Rule 35    cuerpo -> bloque cuerpo
Rule 36    cuerpo -> bloque
Rule 37    instruccion -> expresion TkPuntoYComa
Rule 38    instruccion -> condicional
Rule 39    instruccion -> iterDeter
Rule 40    instruccion -> iterInd
Rule 41    instruccion -> asignacion TkPuntoYComa
Rule 42    instruccion -> input TkPuntoYComa
Rule 43    instruccion -> output TkPuntoYComa
Rule 44    condicional -> TkIf expresion TkHacer cuerpo TkEnd
Rule 45    condicional -> TkIf expresion TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
Rule 46    asignacion -> TkId TkAsignacion expresion
Rule 47    asignacion -> indice TkAsignacion expresion
Rule 48    indice -> TkId TkCorcheteAbre terminal TkCorcheteCierra
Rule 49    indice -> TkId TkCorcheteAbre opAritm TkCorcheteCierra
Rule 50    indice -> TkId TkCorcheteAbre indice TkCorcheteCierra
Rule 51    input -> TkRead TkId
Rule 52    output -> TkPrint expresion
Rule 53    iterInd -> TkWhile opRel TkHacer cuerpo TkEnd
Rule 54    iterInd -> TkWhile opBool TkHacer cuerpo TkEnd
Rule 55    iterDeter -> TkFor TkId TkFrom opAritm TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
Rule 56    iterDeter -> TkFor TkId TkFrom opAritm TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
Rule 57    iterDeter -> TkFor TkId TkFrom terminal TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
Rule 58    iterDeter -> TkFor TkId TkFrom terminal TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
Rule 59    iterDeter -> TkFor TkId TkFrom opAritm TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
Rule 60    iterDeter -> TkFor TkId TkFrom opAritm TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
Rule 61    iterDeter -> TkFor TkId TkFrom terminal TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
Rule 62    iterDeter -> TkFor TkId TkFrom terminal TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
Rule 63    iterDeter -> TkFor TkId TkFrom opAritm TkTo opAritm TkHacer cuerpo TkEnd
Rule 64    iterDeter -> TkFor TkId TkFrom opAritm TkTo terminal TkHacer cuerpo TkEnd
Rule 65    iterDeter -> TkFor TkId TkFrom terminal TkTo opAritm TkHacer cuerpo TkEnd
Rule 66    iterDeter -> TkFor TkId TkFrom terminal TkTo terminal TkHacer cuerpo TkEnd
Rule 67    expresion -> opAritm
Rule 68    expresion -> terminal
Rule 69    expresion -> opRel
Rule 70    expresion -> opCar
Rule 71    expresion -> opBool
Rule 72    expresion -> indice
Rule 73    opAritm -> expresion TkResta expresion
Rule 74    opAritm -> expresion TkSuma expresion
Rule 75    opAritm -> expresion TkDiv expresion
Rule 76    opAritm -> expresion TkMult expresion
Rule 77    opAritm -> expresion TkMod expresion
Rule 78    opAritm -> expresion TkConcatenacion expresion
Rule 79    opAritm -> expresion TkPunto expresion
Rule 80    opAritm -> TkParAbre expresion TkResta expresion TkParCierra
Rule 81    opAritm -> TkParAbre expresion TkSuma expresion TkParCierra
Rule 82    opAritm -> TkParAbre expresion TkDiv expresion TkParCierra
Rule 83    opAritm -> TkParAbre expresion TkMult expresion TkParCierra
Rule 84    opAritm -> TkParAbre expresion TkMod expresion TkParCierra
Rule 85    opAritm -> TkParAbre expresion TkConcatenacion expresion TkParCierra
Rule 86    opAritm -> TkParAbre expresion TkPunto expresion TkParCierra
Rule 87    opAritm -> TkResta expresion
Rule 88    opAritm -> TkParAbre TkResta expresion TkParCierra
Rule 89    opAritm -> TkShift expresion
Rule 90    opAritm -> TkParAbre TkShift expresion TkParCierra
Rule 91    opCar -> terminal TkSiguienteCar
Rule 92    opCar -> terminal TkAnteriorCar
Rule 93    opCar -> TkValorAscii terminal
Rule 94    opCar -> TkValorAscii terminal TkSiguienteCar
Rule 95    opCar -> TkValorAscii terminal TkAnteriorCar
Rule 96    opCar -> indice TkSiguienteCar
Rule 97    opCar -> indice TkAnteriorCar
Rule 98    opCar -> TkValorAscii indice
Rule 99    opCar -> TkValorAscii indice TkSiguienteCar
Rule 100   opCar -> TkValorAscii indice TkAnteriorCar
Rule 101   opRel -> expresion TkMayor expresion
Rule 102   opRel -> expresion TkMenor expresion
Rule 103   opRel -> expresion TkMayorIgual expresion
Rule 104   opRel -> expresion TkMenorIgual expresion
Rule 105   opRel -> expresion TkIgual expresion
Rule 106   opRel -> expresion TkDesigual expresion
Rule 107   opRel -> TkParAbre expresion TkMayor expresion TkParCierra
Rule 108   opRel -> TkParAbre expresion TkMenor expresion TkParCierra
Rule 109   opRel -> TkParAbre expresion TkMayorIgual expresion TkParCierra
Rule 110   opRel -> TkParAbre expresion TkMenorIgual expresion TkParCierra
Rule 111   opRel -> TkParAbre expresion TkIgual expresion TkParCierra
Rule 112   opRel -> TkParAbre expresion TkDesigual expresion TkParCierra
Rule 113   variables -> TkId TkComa variables
Rule 114   variables -> TkId TkAsignacion expresion TkComa variables
Rule 115   variables -> TkId
Rule 116   variables -> TkId TkAsignacion expresion
Rule 117   opBool -> expresion TkConjuncion expresion
Rule 118   opBool -> expresion TkDisyuncion expresion
Rule 119   opBool -> TkParAbre expresion TkConjuncion expresion TkParCierra
Rule 120   opBool -> TkParAbre expresion TkDisyuncion expresion TkParCierra
Rule 121   opBool -> TkNot expresion
Rule 122   opBool -> TkParAbre TkNot expresion TkParCierra

Terminals, with rules where they appear

TkAnteriorCar        : 92 95 97 100
TkArray              : 11 12 13 14 15 16 17 18 19 20 21 22
TkAsignacion         : 46 47 114 116
TkBarra              : 31
TkBegin              : 1 2
TkBool               : 4 8 13 17 21
TkCarError           : 
TkCarEspecial        : 
TkCaracter           : 24
TkCaracterError      : 
TkChar               : 5 9 11 15 19
TkComa               : 113 114
TkComilla            : 30
TkConcatenacion      : 78 85
TkConjuncion         : 117 119
TkCorcheteAbre       : 11 12 13 14 15 16 17 18 19 20 21 22 48 49 50
TkCorcheteCierra     : 11 12 13 14 15 16 17 18 19 20 21 22 48 49 50
TkDesigual           : 106 112
TkDisyuncion         : 118 120
TkDiv                : 75 82
TkDosPuntos          : 3 4 5 6 7 8 9 10
TkEnd                : 1 2 44 45 53 54 55 56 57 58 59 60 61 62 63 64 65 66
TkError              : 
TkErrorSol           : 
TkFalse              : 27
TkFor                : 55 56 57 58 59 60 61 62 63 64 65 66
TkFrom               : 55 56 57 58 59 60 61 62 63 64 65 66
TkHacer              : 44 45 45 53 54 55 56 57 58 59 60 61 62 63 64 65 66
TkId                 : 23 46 48 49 50 51 55 56 57 58 59 60 61 62 63 64 65 66 113 114 115 116
TkIf                 : 44 45
TkIgual              : 105 111
TkInt                : 3 7 12 16 20
TkLlaveAbre          : 
TkLlaveCierra        : 
TkMayor              : 101 107
TkMayorIgual         : 103 109
TkMenor              : 102 108
TkMenorIgual         : 104 110
TkMod                : 77 84
TkMult               : 76 83
TkNot                : 121 122
TkNum                : 25
TkOf                 : 11 12 13 14 15 16 17 18 19 20 21 22
TkOtherwise          : 45
TkParAbre            : 32 80 81 82 83 84 85 86 88 90 107 108 109 110 111 112 119 120 122
TkParCierra          : 32 80 81 82 83 84 85 86 88 90 107 108 109 110 111 112 119 120 122
TkPrint              : 52
TkPunto              : 79 86
TkPuntoYComa         : 37 41 42 43
TkRead               : 51
TkResta              : 73 80 87 88
TkSalto              : 29
TkShift              : 89 90
TkSiguienteCar       : 91 94 96 99
TkStep               : 55 56 57 58 59 60 61 62
TkSuma               : 74 81
TkTab                : 28
TkTo                 : 55 56 57 58 59 60 61 62 63 64 65 66
TkTrue               : 26
TkValorAscii         : 93 94 95 98 99 100
TkVar                : 3 4 5 6 7 8 9 10
TkWhile              : 53 54
TkWith               : 2
error                : 

Nonterminals, with rules where they appear

arreglo              : 6 10 14 18 22
asignacion           : 41
bloque               : 35 36 0
condicional          : 38
cuerpo               : 1 2 34 35 44 45 45 53 54 55 56 57 58 59 60 61 62 63 64 65 66
declaracion          : 2 7 8 9 10
expresion            : 37 44 45 46 47 52 73 73 74 74 75 75 76 76 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 88 89 90 101 101 102 102 103 103 104 104 105 105 106 106 107 107 108 108 109 109 110 110 111 111 112 112 114 116 117 117 118 118 119 119 120 120 121 122
indice               : 19 20 21 22 47 50 72 96 97 98 99 100
input                : 42
instruccion          : 33 34
iterDeter            : 39
iterInd              : 40
opAritm              : 15 16 17 18 49 55 55 55 56 56 57 57 58 59 59 60 61 63 63 64 65 67
opBool               : 54 71
opCar                : 70
opRel                : 53 69
output               : 43
terminal             : 11 12 13 14 32 48 56 57 58 58 59 60 60 61 61 62 62 62 64 65 66 66 68 91 92 93 94 95
variables            : 3 4 5 6 7 8 9 10 113 114

Parsing method: LALR

state 0

    (0) S' -> . bloque
    (1) bloque -> . TkBegin cuerpo TkEnd
    (2) bloque -> . TkWith declaracion TkBegin cuerpo TkEnd

    TkBegin         shift and go to state 1
    TkWith          shift and go to state 2

    bloque                         shift and go to state 3

state 1

    (1) bloque -> TkBegin . cuerpo TkEnd
    (33) cuerpo -> . instruccion
    (34) cuerpo -> . instruccion cuerpo
    (35) cuerpo -> . bloque cuerpo
    (36) cuerpo -> . bloque
    (37) instruccion -> . expresion TkPuntoYComa
    (38) instruccion -> . condicional
    (39) instruccion -> . iterDeter
    (40) instruccion -> . iterInd
    (41) instruccion -> . asignacion TkPuntoYComa
    (42) instruccion -> . input TkPuntoYComa
    (43) instruccion -> . output TkPuntoYComa
    (1) bloque -> . TkBegin cuerpo TkEnd
    (2) bloque -> . TkWith declaracion TkBegin cuerpo TkEnd
    (67) expresion -> . opAritm
    (68) expresion -> . terminal
    (69) expresion -> . opRel
    (70) expresion -> . opCar
    (71) expresion -> . opBool
    (72) expresion -> . indice
    (44) condicional -> . TkIf expresion TkHacer cuerpo TkEnd
    (45) condicional -> . TkIf expresion TkHacer cuerpo TkOtherwise TkHacer cuerpo TkEnd
    (55) iterDeter -> . TkFor TkId TkFrom opAritm TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
    (56) iterDeter -> . TkFor TkId TkFrom opAritm TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
    (57) iterDeter -> . TkFor TkId TkFrom terminal TkTo opAritm TkStep opAritm TkHacer cuerpo TkEnd
    (58) iterDeter -> . TkFor TkId TkFrom terminal TkTo terminal TkStep opAritm TkHacer cuerpo TkEnd
    (59) iterDeter -> . TkFor TkId TkFrom opAritm TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
    (60) iterDeter -> . TkFor TkId TkFrom opAritm TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
    (61) iterDeter -> . TkFor TkId TkFrom terminal TkTo opAritm TkStep terminal TkHacer cuerpo TkEnd
    (62) iterDeter -> . TkFor TkId TkFrom terminal TkTo terminal TkStep terminal TkHacer cuerpo TkEnd
    (63) iterDeter -> . TkFor TkId TkFrom opAritm TkTo opAritm TkHacer cuerpo TkEnd
    (64) iterDeter -> . TkFor TkId TkFrom opAritm TkTo terminal TkHacer cuerpo TkEnd
    (65) iterDeter -> . TkFor TkId TkFrom terminal TkTo opAritm TkHacer cuerpo TkEnd
    (66) iterDeter -> . TkFor TkId TkFrom terminal TkTo terminal TkHacer cuerpo TkEnd
    (53) iterInd -> . TkWhile opRel TkHacer cuerpo TkEnd
    (54) iterInd -> . TkWhile opBool TkHacer cuerpo TkEnd
    (46) asignacion -> . TkId TkAsignacion expresion
    (47) asignacion -> . indice TkAsignacion expresion
    (51) input -> . TkRead TkId
    (52) output -> . TkPrint expresion
    (73) opAritm -> . expresion TkResta expresion
    (74) opAritm -> . expresion TkSuma expresion
    (75) opAritm -> . expresion TkDiv expresion
    (76) opAritm -> . expresion TkMult expresion
    (77) opAritm -> . expresion TkMod expresion
    (78) opAritm -> . expresion TkConcatenacion expresion
    (79) opAritm -> . expresion TkPunto expresion
    (80) opAritm -> . TkParAbre expresion TkResta expresion TkParCierra
    (81) opAritm -> . TkParAbre expresion TkSuma expresion TkParCierra
    (82) opAritm -> . TkParAbre expresion TkDiv expresion TkParCierra
    (83) opAritm -> . TkParAbre expresion TkMult expresion TkParCierra
    (84) opAritm -> . TkParAbre expresion TkMod expresion TkParCierra
    (85) opAritm -> . TkParAbre expresion TkConcatenacion expresion TkParCierra
    (86) opAritm -> . TkParAbre expresion TkPunto expresion TkParCierra
    (87) opAritm -> . TkResta expresion
    (88) opAritm -> . TkParAbre TkResta expresion TkParCierra
    (89) opAritm -> . TkShift expresion
    (90) opAritm -> . TkParAbre TkShift expresion TkParCierra
    (23) terminal -> . TkId
    (24) terminal -> . TkCaracter
    (25) terminal -> . TkNum
    (26) terminal -> . TkTrue
    (27) terminal -> . TkFalse
    (28) terminal -> . TkTab
    (29) terminal -> . TkSalto
    (30) terminal -> . TkComilla
    (31) terminal -> . TkBarra
    (32) terminal -> . TkParAbre terminal TkParCierra
    (101) opRel -> . expresion TkMayor expresion
    (102) opRel -> . expresion TkMenor expresion
    (103) opRel -> . expresion TkMayorIgual expresion
    (104) opRel -> . expresion TkMenorIgual expresion
    (105) opRel -> . expresion TkIgual expresion
    (106) opRel -> . expresion TkDesigual expresion
    (107) opRel -> . TkParAbre expresion TkMayor expresion TkParCierra
    (108) opRel -> . TkParAbre expresion TkMenor expresion TkParCierra
    (109) opRel -> . TkParAbre expresion TkMayorIgual expresion TkParCierra
    (110) opRel -> . TkParAbre expresion TkMenorIgual expresion TkParCierra
    (111) opRel -> . TkParAbre expresion TkIgual expresion TkParCierra
    (112) opRel -> . TkParAbre expresion TkDesigual expresion TkParCierra
    (91) opCar -> . terminal TkSiguienteCar
    (92) opCar -> . terminal TkAnteriorCar
    (93) opCar -> . TkValorAscii terminal
    (94) opCar -> . TkValorAscii terminal TkSiguienteCar
    (95) opCar -> . TkValorAscii terminal TkAnteriorCar
    (96) opCar -> . indice TkSiguienteCar
    (97) opCar -> . indice TkAnteriorCar
    (98) opCar -> . TkValorAscii indice
    (99) opCar -> . TkValorAscii indice TkSiguienteCar
    (100) opCar -> . TkValorAscii indice TkAnteriorCar
    (117) opBool -> . expresion TkConjuncion expresion
    (118) opBool -> . expresion TkDisyuncion expresion
    (119) opBool -> . TkParAbre expresion TkConjuncion expresion TkParCierra
    (120) opBool -> . TkParAbre expresion TkDisyuncion expresion TkParCierra
    (121) opBool -> . TkNot expresion
    (122) opBool -> . TkParAbre TkNot expresion TkParCierra
    (48) indice -> . TkId TkCorcheteAbre terminal TkCorcheteCierra
    (49) indice -> . TkId TkCorcheteAbre opAritm TkCorcheteCierra
    (50) indice -> . TkId TkCorcheteAbre indice TkCorcheteCierra

    TkBegin         shift and go to state 1
    TkWith          shift and go to state 2
    TkIf            shift and go to state 28
    TkFor           shift and go to state 27
    TkWhile         shift and go to state 31
    TkId            shift and go to state 33
    TkRead          shift and go to state 26
    TkPrint         shift and go to state 22
    TkParAbre       shift and go to state 37
    TkResta         shift and go to state 38
    TkShift         shift and go to state 7
    TkCaracter      shift and go to state 36
    TkNum           shift and go to state 25
    TkTrue          shift and go to state 12
    TkFalse         shift and go to state 35
    TkTab           shift and go to state 10
    TkSalto         shift and go to state 30
    TkComilla       shift and go to state 8
    TkBarra         shift and go to state 17
    TkValorAscii    shift and go to state 14
    TkNot           shift and go to state 13

    terminal                       shift and go to state 4
    iterInd                        shift and go to state 24
    opAritm                        shift and go to state 5
    bloque                         shift and go to state 20
    expresion                      shift and go to state 21
    opCar                          shift and go to state 34
    indice                         shift and go to state 23
    cuerpo                         shift and go to state 32
    condicional                    shift and go to state 9
    instruccion                    shift and go to state 15
    output                         shift and go to state 16
    asignacion                     shift and go to state 6
    input                          shift and go to state 11
    iterDeter                      shift and go to state 18
    opBool                         shift and go to state 29
    opRel                          shift and go to state 19

state 2

    (2) bloque -> TkWith . declaracion TkBegin cuerpo TkEnd
    (3) declaracion -> . TkVar variables TkDosPuntos TkInt
    (4) declaracion -> . TkVar variables TkDosPuntos TkBool
    (5) declaracion -> . TkVar variables TkDosPuntos TkChar
    (6) declaracion -> . TkVar variables TkDosPuntos arreglo
    (7) declaracion -> . TkVar variables TkDosPuntos TkInt declaracion
    (8) declaracion -> . TkVar variables TkDosPuntos TkBool declaracion
    (9) declaracion -> . TkVar variables TkDosPuntos TkChar declaracion
    (10) declaracion -> . TkVar variables TkDosPuntos arreglo declaracion

    TkVar           shift and go to state 40

    declaracion                    shift and go to state 39

state 3

    (0) S' -> bloque .



state 4

    (68) expresion -> terminal .
    (91) opCar -> terminal . TkSiguienteCar
    (92) opCar -> terminal . TkAnteriorCar

    TkResta         reduce using rule 68 (expresion -> terminal .)
    TkSuma          reduce using rule 68 (expresion -> terminal .)
    TkDiv           reduce using rule 68 (expresion -> terminal .)
    TkMult          reduce using rule 68 (expresion -> terminal .)
    TkMod           reduce using rule 68 (expresion -> terminal .)
    TkConcatenacion reduce using rule 68 (expresion -> terminal .)
    TkPunto         reduce using rule 68 (expresion -> terminal .)
    TkMayor         reduce using rule 68 (expresion -> terminal .)
    TkMenor         reduce using rule 68 (expresion -> terminal .)
    TkMayorIgual    reduce using rule 68 (expresion -> terminal .)
    TkMenorIgual    reduce using rule 68 (expresion -> terminal .)
    TkIgual         reduce using rule 68 (expresion -> terminal .)
    TkDesigual      reduce using rule 68 (expresion -> terminal .)
    TkConjuncion    reduce using rule 68 (expresion -> terminal .)
    TkDisyuncion    reduce using rule 68 (expresion -> terminal .)
    TkPuntoYComa    reduce using rule 68 (expresion -> terminal .)
    TkHacer         reduce using rule 68 (expresion -> terminal .)
    TkCorcheteCierra reduce using rule 68 (expresion -> terminal .)
    TkParCierra     reduce using rule 68 (expresion -> terminal .)
    TkTo            reduce using rule 68 (expresion -> terminal .)
    TkComa          reduce using rule 68 (expresion -> terminal .)
    TkDosPuntos     reduce using rule 68 (expresion -> terminal .)
    TkStep          reduce using rule 68 (expresion -> terminal .)
    TkSiguienteCar  shift and go to state 42
    TkAnteriorCar   shift and go to state 41


state 5

    (67) expresion -> opAritm .

    TkResta         reduce using rule 67 (expresion -> opAritm .)
    TkSuma          reduce using rule 67 (expresion -> opAritm .)
    TkDiv           reduce using rule 67 (expresion -> opAritm .)
    TkMult          reduce using rule 67 (expresion -> opAritm .)
    TkMod           reduce using rule 67 (expresion -> opAritm .)
    TkConcatenacion reduce using rule 67 (expresion -> opAritm .)
    TkPunto         reduce using rule 67 (expresion -> opAritm .)
    TkMayor         reduce using rule 67 (expresion -> opAritm .)
    TkMenor         reduce using rule 67 (expresion -> opAritm .)
    TkMayorIgual    reduce using rule 67 (expresion -> opAritm .)
    TkMenorIgual    reduce using rule 67 (expresion -> opAritm .)
    TkIgual         reduce using rule 67 (expresion -> opAritm .)
    TkDesigual      reduce using rule 67 (expresion -> opAritm .)
    TkConjuncion    reduce using rule 67 (expresion -> opAritm .)
    TkDisyuncion    reduce using rule 67 (expresion -> opAritm .)
    TkPuntoYComa    reduce using rule 67 (expresion -> opAritm .)
    TkHacer         reduce using rule 67 (expresion -> opAritm .)
    TkCorcheteCierra reduce using rule 67 (expresion -> opAritm .)
    TkParCierra     reduce using rule 67 (expresion -> opAritm .)
    TkTo            reduce using rule 67 (expresion -> opAritm .)
    TkComa          reduce using rule 67 (expresion -> opAritm .)
    TkDosPuntos     reduce using rule 67 (expresion -> opAritm .)
    TkStep          reduce using rule 67 (expresion -> opAritm .)


state 6

    (41) instruccion -> asignacion . TkPuntoYComa

    TkPuntoYComa    shift and go to state 43


state 7

    (89) opAritm -> TkShift . expresion
    (67) expresion -> . opAritm
    (68) expresion -> . terminal
    (69) expresion -> . opRel
    (70) expresion -> . opCar
    (71) expresion -> . opBool
    (72) expresion -> . indice
    (73) opAritm -> . expresion TkResta expresion
    (74) opAritm -> . expresion TkSuma expresion
    (75) opAritm -> . expresion TkDiv expresion
    (76) opAritm -> . expresion TkMult expresion
    (77) opAritm -> . expresion TkMod expresion
    (78) opAritm -> . expresion TkConcatenacion expresion
    (79) opAritm -> . expresion TkPunto expresion
    (80) opAritm -> . TkParAbre expresion TkResta expresion TkParCierra
    (81) opAritm -> . TkParAbre expresion TkSuma expresion TkParCierra
    (82) opAritm -> . TkParAbre expresion TkDiv expresion TkParCierra
    (83) opAritm -> . TkParAbre expresion TkMult expresion TkParCierra
    (84) opAritm -> . TkParAbre expresion TkMod expresion TkParCierra
    (85) opAritm -> . TkParAbre expresion TkConcatenacion expresion TkParCierra
    (86) opAritm -> . TkParAbre expresion TkPunto expresion TkParCierra
    (87) opAritm -> . TkResta expresion
    (88) opAritm -> . TkParAbre TkResta expresion TkParCierra
    (89) opAritm -> . TkShift expresion
    (90) opAritm -> . TkParAbre TkShift expresion TkParCierra
    (23) terminal -> . TkId
    (24) terminal -> . TkCaracter
    (25) terminal -> . TkNum
    (26) terminal -> . TkTrue
    (27) terminal -> . TkFalse
    (28) terminal -> . TkTab
    (29) terminal -> . TkSalto
    (30) terminal -> . TkComilla
    (31) terminal -> . TkBarra
    (32) terminal -> . TkParAbre terminal TkParCierra
    (101) opRel -> . expresion TkMayor expresion
    (102) opRel -> . expresion TkMenor expresion
    (103) opRel -> . expresion TkMayorIgual expresion
    (104) opRel -> . expresion TkMenorIgual expresion
    (105) opRel -> . expresion TkIgual expresion
    (106) opRel -> . expresion TkDesigual expresion
    (107) opRel -> . TkParAbre expresion TkMayor expresion TkParCierra
    (108) opRel -> . TkParAbre expresion TkMenor expresion TkParCierra
    (109) opRel -> . TkParAbre expresion TkMayorIgual expresion TkParCierra
    (110) opRel -> . TkParAbre expresion TkMenorIgual expresion TkParCierra
    (111) opRel -> . TkParAbre expresion TkIgual expresion TkParCierra
    (112) opRel -> . TkParAbre expresion TkDesigual expresion TkParCierra
    (91) opCar -> . terminal TkSiguienteCar
    (92) opCar -> . terminal TkAnteriorCar
    (93) opCar -> . TkValorAscii terminal
    (94) opCar -> . TkValorAscii terminal TkSiguienteCar
    (95) opCar -> . TkValorAscii terminal TkAnteriorCar
    (96) opCar -> . indice TkSiguienteCar
    (97) opCar -> . indice TkAnteriorCar
    (98) opCar -> . TkValorAscii indice
    (99) opCar -> . TkValorAscii indice TkSiguienteCar
    (100) opCar -> . TkValorAscii indice TkAnteriorCar
    (117) opBool -> . expresion TkConjuncion expresion
    (118) opBool -> . expresion TkDisyuncion expresion
    (119) opBool -> . TkParAbre expresion TkConjuncion expresion TkParCierra
    (120) opBool -> . TkParAbre expresion TkDisyuncion expresion TkParCierra
    (121) opBool -> . TkNot expresion
    (122) opBool -> . TkParAbre TkNot expresion TkParCierra
    (48) indice -> . TkId TkCorcheteAbre terminal TkCorcheteCierra
    (49) indice -> . TkId TkCorcheteAbre opAritm TkCorcheteCierra
    (50) indice -> . TkId TkCorcheteAbre indice TkCorcheteCierra

    TkParAbre       shift and go to state 37
    TkResta         shift and go to state 38
    TkShift         shift and go to state 7
    TkId            shift and go to state 46
    TkCaracter      shift and go to state 36
    TkNum           shift and go to state 25
    TkTrue          shift and go to state 12
    TkFalse         shift and go to state 35
    TkTab           shift and go to state 10
    TkSalto         shift and go to state 30
    TkComilla       shift and go to state 8
    TkBarra         shift and go to state 17
    TkValorAscii    shift and go to state 14
    TkNot           shift and go to state 13

    terminal                       shift and go to state 4
    opAritm                        shift and go to state 5
    opCar                          shift and go to state 34
    expresion                      shift and go to state 44
    opBool                         shift and go to state 29
    indice                         shift and go to state 45
    opRel                          shift and go to state 19

state 8

    (30) terminal -> TkComilla .

    TkSiguienteCar  reduce using rule 30 (terminal -> TkComilla .)
    TkAnteriorCar   reduce using rule 30 (terminal -> TkComilla .)
    TkPuntoYComa    reduce using rule 30 (terminal -> TkComilla .)
    TkResta         reduce using rule 30 (terminal -> TkComilla .)
    TkSuma          reduce using rule 30 (terminal -> TkComilla .)
    TkDiv           reduce using rule 30 (terminal -> TkComilla .)
    TkMult          reduce using rule 30 (terminal -> TkComilla .)
    TkMod           reduce using rule 30 (terminal -> TkComilla .)
    TkConcatenacion reduce using rule 30 (terminal -> TkComilla .)
    TkPunto         reduce using rule 30 (terminal -> TkComilla .)
    TkMayor         reduce using rule 30 (terminal -> TkComilla .)
    TkMenor         reduce using rule 30 (terminal -> TkComilla .)
    TkMayorIgual    reduce using rule 30 (terminal -> TkComilla .)
    TkMenorIgual    reduce using rule 30 (terminal -> TkComilla .)
    TkIgual         reduce using rule 30 (terminal -> TkComilla .)
    TkDesigual      reduce using rule 30 (terminal -> TkComilla .)
    TkConjuncion    reduce using rule 30 (terminal -> TkComilla .)
    TkDisyuncion    reduce using rule 30 (terminal -> TkComilla .)
    TkHacer         reduce using rule 30 (terminal -> TkComilla .)
    TkCorcheteCierra reduce using rule 30 (terminal -> TkComilla .)
    TkParCierra     reduce using rule 30 (terminal -> TkComilla .)
    TkTo            reduce using rule 30 (terminal -> TkComilla .)
    TkComa          reduce using rule 30 (terminal -> TkComilla .)
    TkDosPuntos     reduce using rule 30 (terminal -> TkComilla .)
    TkStep          reduce using rule 30 (terminal -> TkComilla .)


state 9

    (38) instruccion -> condicional .

    TkBegin         reduce using rule 38 (instruccion -> condicional .)
    TkWith          reduce using rule 38 (instruccion -> condicional .)
    TkIf            reduce using rule 38 (instruccion -> condicional .)
    TkFor           reduce using rule 38 (instruccion -> condicional .)
    TkWhile         reduce using rule 38 (instruccion -> condicional .)
    TkId            reduce using rule 38 (instruccion -> condicional .)
    TkRead          reduce using rule 38 (instruccion -> condicional .)
    TkPrint         reduce using rule 38 (instruccion -> condicional .)
    TkParAbre       reduce using rule 38 (instruccion -> condicional .)
    TkResta         reduce using rule 38 (instruccion -> condicional .)
    TkShift         reduce using rule 38 (instruccion -> condicional .)
    TkCaracter      reduce using rule 38 (instruccion -> condicional .)
    TkNum           reduce using rule 38 (instruccion -> condicional .)
    TkTrue          reduce using rule 38 (instruccion -> condicional .)
    TkFalse         reduce using rule 38 (instruccion -> condicional .)
    TkTab           reduce using rule 38 (instruccion -> condicional .)
    TkSalto         reduce using rule 38 (instruccion -> condicional .)
    TkComilla       reduce using rule 38 (instruccion -> condicional .)
    TkBarra         reduce using rule 38 (instruccion -> condicional .)
    TkValorAscii    reduce using rule 38 (instruccion -> condicional .)
    TkNot           reduce using rule 38 (instruccion -> condicional .)
    TkEnd           reduce using rule 38 (instruccion -> condicional .)
    TkOtherwise     reduce using rule 38 (instruccion -> condicional .)


state 10

    (28) terminal -> TkTab .
